# game2048

./: .ycm_extra_conf.py  CMakeLists.txt  qml.qrc  qtquickcontrols2.conf  res.qrc
includes/: game2048logic.hpp  model2048.hpp
javascript/: Color.js  js.qrc
lib/: CMakeLists.txt
lib/game2048Model/: CMakeLists.txt
lib/game2048Model/includes/: game2048model.hpp
lib/game2048Model/srcs/: game2048model.cpp
qml/: main.qml
qml/Game2048/: qmldir
qml/Game2048/Board/: Board.qml  qmldir
qml/Game2048/BoardScore/: BoardScore.qml  qmldir
qml/Game2048/Button/: Button.qml  qmldir
qml/Game2048/Score/: Score.qml  qmldir
qml/Game2048/Tile/: Tile.qml  qmldir
srcs/: game2048logic.cpp  main.cpp  model2048.cpp
tests/game2048Model/: CMakeLists.txt
tests/game2048Model/includes/: tst_game2048.hpp
tests/game2048Model/srcs/: tst_game2048.cpp
